<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_color">


    <View
        android:id="@+id/view2"
        android:layout_width="350dp"
        android:layout_height="460dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/back_sing_in"
        app:layout_constraintBottom_toTopOf="@+id/guidelinedown_sing_in"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight_sing_in"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="@+id/guidelineleft_sing_in"
        app:layout_constraintTop_toTopOf="@+id/guidelineup_sing_in"
        app:layout_constraintVertical_bias="0.786" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="-120dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email_adress"
        android:inputType="textEmailAddress"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editTextTextPassword2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="27dp"
        android:layout_marginBottom="-60dp"
        android:background="@drawable/custom_button_login"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@id/view2"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@id/view2"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword2" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/psssword"
        android:inputType="textPassword"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintVertical_bias="0.792" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineup_sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="6dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinedown_sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="726dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineleft_sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight_sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="405dp" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/sing_up"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.179"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="250dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="44dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#B1ACAC"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sing_up_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="44dp"
        android:clickable="true"
        android:text="@string/sing_in"
        android:textColor="#373535"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintEnd_toEndOf="@id/view2"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toEndOf="@id/textView3"

        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>

<!--

    tools:layout_editor_absoluteX="235dp"
    tools:layout_editor_absoluteY="606dp"-->
