<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/singinimage">


    <View
        android:id="@+id/view2"
        android:layout_width="330dp"
        android:layout_height="490dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/back_sing_in"
        app:layout_constraintBottom_toTopOf="@+id/guidelinedown_sing_in"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight_sing_in"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/guidelineleft_sing_in"
        app:layout_constraintTop_toTopOf="@+id/guidelineup_sing_in"
        app:layout_constraintVertical_bias="0.496" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginBottom="156dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:textColorHint="#80FFFFFF"
        android:textColor="@color/white"
        android:hint="@string/email_adress"
        android:inputType="textEmailAddress"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#FDD835"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@id/view2"
        app:layout_constraintStart_toStartOf="@id/view2"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword3" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="password"
        android:ems="10"
        android:textColorHint="#80FFFFFF"
        android:textColor="@color/white"
        android:hint="@string/psssword"
        android:inputType="textPassword"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress3"
        app:layout_constraintVertical_bias="0.792" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineup_sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinedown_sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="731dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineleft_sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight_sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="411dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/sing_up"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress3"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.231"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="172dp"
        android:src="@drawable/singin"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress3"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="20dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#FFFEFE"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sing_up_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/sing_in"
        android:textColor="#FDD835"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintVertical_bias="0.322"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>

<!--

    tools:layout_editor_absoluteX="235dp"
    tools:layout_editor_absoluteY="606dp"-->
