<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_color"
    tools:context=".main_activity2">


    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="336dp"
        android:layout_height="320dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:progressDrawable="@drawable/loding"
        android:rotation="90"
        app:layout_constraintBottom_toTopOf="@id/guidelinedown"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="@id/guidelineleft"
        app:layout_constraintTop_toBottomOf="@id/guidelineup"
        app:layout_constraintVertical_bias="0.439"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />


    <TextView
        android:id="@+id/textview1"
        android:layout_width="175dp"
        android:layout_height="49dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/all_contacts"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineleft"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#FFD600"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/ContactsCountEdir"
        android:layout_width="58dp"
        android:layout_height="66dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="50dp"
        android:text="@string/seventy"
        android:textColor="#FDD835"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar"
        tools:ignore="MissingConstraints" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backup_button"
        android:layout_width="80dp"
        android:layout_height="69dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/custom_button"
        android:drawableTop="@drawable/backup"
        android:drawablePadding="1dp"
        android:padding="7dp"
        android:text="@string/back_up"
        android:textAllCaps="false"
        android:textColor="#FDD835"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/Restore_button"
        app:layout_constraintStart_toEndOf="@+id/exel_button"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.488"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pdf_button"
        android:layout_width="80dp"
        android:layout_height="69dp"
        android:background="@drawable/custom_button"
        android:drawableTop="@drawable/pdf"
        android:drawablePadding="1dp"
        android:padding="10dp"
        android:text="@string/pdf"
        android:textAllCaps="false"
        android:textColor="#FDD835"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/backup_button"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteY="520dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exel_button"
        android:layout_width="80dp"
        android:layout_height="69dp"
        android:layout_marginStart="52dp"
        android:background="@drawable/custom_button"
        android:drawableTop="@drawable/excel"
        android:drawablePadding="1dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/excel"
        android:textAllCaps="false"
        android:textColor="#FDD835"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/Restore_button"
        app:layout_constraintStart_toStartOf="@+id/guidelineleft"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.488"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Restore_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/circle"
        android:text="@string/restore"
        android:textAllCaps="false"
        android:textColor="#3E3C3C"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/guidelinedown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineleft"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.0"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinedown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="1.0" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="85dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/user_name"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guidelineleft"
        app:layout_constraintTop_toTopOf="@+id/guidelineup"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/menu_btn"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="16dp"
        android:src="@drawable/ic_baseline_menu_24"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toTopOf="@+id/guidelineup"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/test"
        android:layout_width="65dp"
        android:layout_height="25dp"
        android:background="@drawable/custom_button"
        android:text="test"
        app:layout_constraintBottom_toBottomOf="@+id/textview1"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineleft"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.159"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/test_textview"
        android:layout_width="25dp"
        android:layout_height="21dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text=""
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/ContactsCountEdir"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>